# TactiBeter

./: PRIVACY.md
api/: Cargo.toml  Dockerfile
api/proto/: Cargo.toml  build.rs
api/proto/protos/entities/: schedule.proto  timesheet.proto
api/proto/protos/payloads/: login.proto  schedule.proto  session.proto  timesheet.proto
api/proto/src/: lib.rs
api/tactibetter/: Cargo.toml
api/tactibetter/migrations/: V1__initial.sql
api/tactibetter/src/: config.rs  main.rs  webdata.rs
api/tactibetter/src/dal/: encryption.rs  error.rs  mod.rs  user.rs
api/tactibetter/src/routes/: error.rs  mod.rs  session.rs
api/tactibetter/src/routes/v1/: login.rs  mod.rs  schedule.rs  session.rs
api/tactibetter/src/routes/v1/timesheet/: load.rs  mod.rs  set.rs
api/tactibetter/src/tactiplan/: app_index.rs  error.rs  login.rs  mod.rs  reqwest_xml.rs  schedule.rs
api/tactibetter/src/tactiplan/timesheets/: load.rs  mod.rs  save.rs
app/: .gitignore  Makefile  README.md  pubspec.yaml
app/android/app/: build.gradle
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/api/: api_common.dart  login.dart  schedule.dart  timesheet.dart
app/lib/components/: day_selector.dart  schedule.dart  weekselector.dart
app/lib/components/schedule/: schedule_day.dart  schedule_entry.dart
app/lib/components/timesheet/: block_in_list.dart
app/lib/pages/: about.dart  schedule.dart
app/lib/pages/timesheet/: timesheet.dart  view_block.dart
app/lib/util/: datetime.dart  prefs.dart
app/lib/views/: home.dart  login.dart  splash.dart
(+28 files in other folders)
