[package]
name = "tactibetter"
version = "0.1.0"
edition = "2021"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]

[dependencies]
actix-web = "4.2.1"
thiserror = "1.0.37"
tracing = "0.1.37"
tap = "1.0.1"
lazy_static = "1.4.0"
const_format = "0.2.28"
async-trait = "0.1.57"
regex = "1.6.0"
time = "0.3.15"
tzdb = "0.4.6"
tz-rs = "0.6.14"
actix-multiresponse = "0.2.0"
envy = "0.4.2"
tracing-actix-web = "0.6.1"
actix-cors = "0.6.3"
chacha20poly1305 = "0.9.1"
rand = "0.8.5"
chrono = "0.4.22"
chrono-tz = "0.6.3"
serde_json = "1.0.86"

[dependencies.proto]
path = "../proto"

[dependencies.mysql]
version = "=22.0.0"
default-features = false

[dependencies.refinery]
version = "0.8.6"
features = ["mysql"]

[dependencies.serde]
version = "1.0.145"
features = ["derive"]

[dependencies.fast-xml]
version = "0.23.1"
features = ["serialize"]

[dependencies.tracing-subscriber]
version = "0.3.16"
features = ["env-filter"]

[dependencies.reqwest]
version = "0.11.12"
default-features = false
features = ["rustls-tls", "cookies", "json"]